# toj

./: .gitignore  package-lock.json  readme.md
core/: CMakeLists.txt  config.h  config.h.in  toj-core.cpp
core/include/: util.h
core/libs/boost_1_84_0/stage/lib/: libboost_atomic.so.1.84.0  libboost_chrono.so.1.84.0  libboost_container.so.1.84.0  libboost_context.so.1.84.0  libboost_contract.so.1.84.0  libboost_coroutine.so.1.84.0  libboost_date_time.so.1.84.0  libboost_fiber.so.1.84.0  libboost_filesystem.so.1.84.0  libboost_graph.so.1.84.0  libboost_iostreams.so.1.84.0  libboost_json.so.1.84.0  libboost_locale.so.1.84.0  libboost_log.so.1.84.0  libboost_log_setup.so.1.84.0  libboost_math_c99.so.1.84.0  libboost_math_c99f.so.1.84.0  libboost_math_c99l.so.1.84.0  libboost_math_tr1.so.1.84.0  libboost_math_tr1f.so.1.84.0  libboost_math_tr1l.so.1.84.0  libboost_nowide.so.1.84.0  libboost_prg_exec_monitor.so.1.84.0  libboost_program_options.so.1.84.0  libboost_random.so.1.84.0  libboost_regex.so.1.84.0  libboost_serialization.so.1.84.0  libboost_stacktrace_addr2line.so.1.84.0  libboost_stacktrace_backtrace.so.1.84.0  libboost_stacktrace_basic.so.1.84.0  libboost_stacktrace_noop.so.1.84.0  libboost_system.so.1.84.0  libboost_thread.so.1.84.0  libboost_timer.so.1.84.0  libboost_type_erasure.so.1.84.0  libboost_unit_test_framework.so.1.84.0  libboost_url.so.1.84.0  libboost_wave.so.1.84.0  libboost_wserialization.so.1.84.0
core/libs/boost_1_84_0/stage/lib/cmake/boost_atomic-1.84.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_chrono-1.84.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_container-1.84.0/: boost_container-config.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_context-1.84.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_contract-1.84.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_coroutine-1.84.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-shared.cmake  libboost_coroutine-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_date_time-1.84.0/: boost_date_time-config.cmake  libboost_date_time-variant-shared.cmake  libboost_date_time-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_exception-1.84.0/: boost_exception-config.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_fiber-1.84.0/: boost_fiber-config.cmake  libboost_fiber-variant-shared.cmake  libboost_fiber-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_filesystem-1.84.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-shared.cmake  libboost_filesystem-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_graph-1.84.0/: boost_graph-config.cmake  libboost_graph-variant-shared.cmake  libboost_graph-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_graph_parallel-1.84.0/: boost_graph_parallel-config.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_headers-1.84.0/: boost_headers-config.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_iostreams-1.84.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-shared.cmake  libboost_iostreams-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_json-1.84.0/: boost_json-config.cmake  libboost_json-variant-shared.cmake  libboost_json-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_locale-1.84.0/: boost_locale-config.cmake  libboost_locale-variant-shared.cmake  libboost_locale-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_log-1.84.0/: boost_log-config.cmake  libboost_log-variant-shared.cmake  libboost_log-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_log_setup-1.84.0/: boost_log_setup-config.cmake  libboost_log_setup-variant-shared.cmake  libboost_log_setup-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_math_c99-1.84.0/: boost_math_c99-config.cmake  libboost_math_c99-variant-shared.cmake  libboost_math_c99-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_math_c99f-1.84.0/: boost_math_c99f-config.cmake  libboost_math_c99f-variant-shared.cmake  libboost_math_c99f-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_math_c99l-1.84.0/: boost_math_c99l-config.cmake  libboost_math_c99l-variant-shared.cmake  libboost_math_c99l-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_math_tr1-1.84.0/: boost_math_tr1-config.cmake  libboost_math_tr1-variant-shared.cmake  libboost_math_tr1-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_math_tr1f-1.84.0/: boost_math_tr1f-config.cmake  libboost_math_tr1f-variant-shared.cmake  libboost_math_tr1f-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_math_tr1l-1.84.0/: boost_math_tr1l-config.cmake  libboost_math_tr1l-variant-shared.cmake  libboost_math_tr1l-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_mpi-1.84.0/: boost_mpi-config.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_nowide-1.84.0/: boost_nowide-config.cmake  libboost_nowide-variant-shared.cmake  libboost_nowide-variant-static.cmake
core/libs/boost_1_84_0/stage/lib/cmake/boost_prg_exec_monitor-1.84.0/: boost_prg_exec_monitor-config.cmake  libboost_prg_exec_monitor-variant-shared.cmake  libboost_prg_exec_monitor-variant-static.cmake
core/libs/curl-8.6.0/lib/: libcurl.so.4.8.0
core/libs/googletest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
core/src/: main.cpp
core/src/test/: test.cpp
core/test/: test.cpp
core/vm/: CMakeLists.txt
core/vm/include/: vm.hpp
core/vm/src/: vm.cpp
toj-web-front/: package-lock.json  (+1 more)
(+250 files in other folders)
